single app page

--- a/keyOS/res/layout/activity_settings.xml
+++ b/keyOS/res/layout/activity_settings.xml
@@ -557,6 +557,7 @@
                           android:layout_height="20dp"/>
                   </LinearLayout>
                   <TextView
+                      android:id="@+id/singleApp"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"/>
               </RelativeLayout>
