--- a/keyOS/res/layout/activity_settings.xml
+++ b/keyOS/res/layout/activity_settings.xml
@@ -207,9 +207,8 @@
 
                       <RelativeLayout
                           android:layout_width="0dp"
+                          android:id="@+id/bluetooth"
                           android:layout_weight="10"
-                          android:id="@+id/hotspot"
-
                           android:layout_height="match_parent">
                           <androidx.cardview.widget.CardView
                               android:layout_width="50dp"
@@ -232,65 +231,9 @@
                                       app:cardCornerRadius="24dp"
                                       android:layout_height="48dp">
                                       <ImageView
-                                          app:srcCompat="@drawable/hotspot"
-                                          android:padding="15dp"
-                                          android:background="#0979F2"
-                                          app:tint="@color/white"
-                                          android:layout_width="match_parent"
-                                          android:layout_height="match_parent">
-                                      </ImageView>
-
-
-                                  </androidx.cardview.widget.CardView>
-
-
-
-                              </RelativeLayout>
-
-
-                          </androidx.cardview.widget.CardView>
-
-                          <TextView
-                              android:layout_width="wrap_content"
-                              android:text="Deny"
-                              android:layout_centerInParent="true"
-                              android:layout_alignParentBottom="true"
-                              android:textSize="14dp"
-                              android:id="@+id/hotspotMode"
-                              android:layout_marginRight="20dp"
-                              android:layout_height="wrap_content"/>
-
-                      </RelativeLayout>
-
-                      <RelativeLayout
-                          android:layout_width="0dp"
-                          android:id="@+id/bluetooth"
-                          android:layout_weight="10"
-                          android:layout_height="match_parent">
-                          <androidx.cardview.widget.CardView
-                              android:layout_width="50dp"
-                              android:layout_centerInParent="true"
-                              android:layout_marginBottom="10dp"
-                              app:cardElevation="0dp"
-                              app:cardCornerRadius="25dp"
-                              android:layout_alignParentTop="true"
-                              android:layout_marginTop="10dp"
-                              app:cardBackgroundColor="#7c43bd"
-                              android:layout_height="50dp">
-                              <RelativeLayout
-                                  android:layout_width="match_parent"
-                                  android:layout_height="match_parent">
-                                  <androidx.cardview.widget.CardView
-                                      android:layout_width="48dp"
-                                      android:layout_centerInParent="true"
-                                      app:cardElevation="0dp"
-
-                                      app:cardCornerRadius="24dp"
-                                      android:layout_height="48dp">
-                                      <ImageView
                                           app:srcCompat="@drawable/bluetooth"
-                                          android:padding="15dp"
-                                          android:background="#7c43bd"
+                                          android:padding="13.5dp"
+                                          android:background="#0979F2"
                                           app:tint="@color/white"
                                           android:layout_width="match_parent"
                                           android:layout_height="match_parent">
@@ -317,6 +260,64 @@
                               android:layout_height="wrap_content"/>
 
                       </RelativeLayout>
+
+
+                      <RelativeLayout
+                          android:layout_width="0dp"
+                          android:layout_weight="10"
+                          android:id="@+id/orientation"
+                          android:layout_height="match_parent">
+                          <androidx.cardview.widget.CardView
+                              android:layout_width="50dp"
+                              android:layout_centerInParent="true"
+                              android:layout_marginBottom="10dp"
+                              app:cardElevation="0dp"
+                              app:cardCornerRadius="25dp"
+                              android:layout_alignParentTop="true"
+                              android:layout_marginTop="10dp"
+                              app:cardBackgroundColor="#7c43bd"
+                              android:layout_height="50dp">
+                              <RelativeLayout
+                                  android:layout_width="match_parent"
+                                  android:layout_height="match_parent">
+                                  <androidx.cardview.widget.CardView
+                                      android:layout_width="48dp"
+                                      android:layout_centerInParent="true"
+                                      app:cardElevation="0dp"
+
+                                      app:cardCornerRadius="24dp"
+                                      android:layout_height="48dp">
+                                      <ImageView
+                                          app:srcCompat="@drawable/auto_rotation"
+                                          android:padding="14dp"
+                                          android:background="#7c43bd"
+                                          app:tint="@color/white"
+                                          android:layout_width="match_parent"
+                                          android:layout_height="match_parent">
+                                      </ImageView>
+
+
+                                  </androidx.cardview.widget.CardView>
+
+
+
+                              </RelativeLayout>
+
+
+                          </androidx.cardview.widget.CardView>
+
+                          <TextView
+                              android:layout_width="wrap_content"
+                              android:text="Deny"
+                              android:layout_centerInParent="true"
+                              android:layout_alignParentBottom="true"
+                              android:textSize="14dp"
+                              android:id="@+id/orientationMode"
+                              android:layout_marginRight="20dp"
+                              android:layout_height="wrap_content"/>
+
+                      </RelativeLayout>
+
 
 
 
