add permission bottom sheet

--- a/keyOS/res/layout/sheet_permissions.xml
+++ b/keyOS/res/layout/sheet_permissions.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/list"
     android:layout_width="match_parent"
-    android:background="@drawable/background_sheet"
+    android:background="@android:color/background_light"
     android:layout_height="match_parent"
     android:clipToPadding="false"
    >
@@ -57,49 +57,6 @@
 
             </LinearLayout>
         </RelativeLayout>
-        <RelativeLayout
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="50dp">
-            <androidx.cardview.widget.CardView
-                android:layout_width="35dp"
-                android:layout_marginLeft="10dp"
-                app:cardElevation="0dp"
-                android:layout_centerInParent="true"
-                android:layout_alignParentLeft="true"
-                app:cardCornerRadius="17.5dp"
-                android:layout_height="35dp">
-
-                <ImageView
-                    android:background="#0979F2"
-                    app:srcCompat="@drawable/accessablity"
-                    android:padding="10dp"
-                    app:tint="@android:color/white"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                </ImageView>
-            </androidx.cardview.widget.CardView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="Accessibility"
-                android:gravity="center"
-                android:textColor="@android:color/black"
-                android:layout_marginLeft="65dp"
-                android:textSize="16dp"
-                android:layout_height="match_parent"/>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_alignParentRight="true"
-                android:layout_height="wrap_content">
-                <com.suke.widget.SwitchButton
-                    android:id="@+id/accessablity"
-                    app:sb_show_indicator="false"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-
-        </RelativeLayout>
 
         <RelativeLayout
             android:layout_marginTop="10dp"
@@ -115,7 +72,7 @@
                 android:layout_height="35dp">
 
                 <ImageView
-                    android:background="#E91E63"
+                    android:background="#03A9F4"
                     app:srcCompat="@drawable/overlay"
                     android:padding="10dp"
                     app:tint="@android:color/white"
@@ -242,7 +199,79 @@
                 android:layout_height="35dp">
 
                 <ImageView
-                    android:background="#03A9F4"
+                    android:background="#9C27B0"
+                    app:srcCompat="@drawable/contact"
+                    android:padding="10dp"
+                    app:tint="@android:color/white"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                </ImageView>
+            </androidx.cardview.widget.CardView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="Other Permissions"
+                android:gravity="center"
+                android:textColor="@android:color/black"
+                android:layout_marginLeft="65dp"
+                android:textSize="16dp"
+                android:layout_height="match_parent"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_alignParentRight="true"
+                android:layout_height="wrap_content">
+                <com.suke.widget.SwitchButton
+                    android:id="@+id/other"
+                    app:sb_show_indicator="false"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:paddingTop="10dp"
+                android:text="Optional"
+                android:textAllCaps="true"
+                android:textSize="14dp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/edit_text" />
+        </LinearLayout>
+
+
+        <RelativeLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+            <androidx.cardview.widget.CardView
+                android:layout_width="35dp"
+                android:layout_marginLeft="10dp"
+                app:cardElevation="0dp"
+                android:layout_centerInParent="true"
+                android:layout_alignParentLeft="true"
+                app:cardCornerRadius="17.5dp"
+                android:layout_height="35dp">
+
+                <ImageView
+                    android:background="#E91E63"
                     app:srcCompat="@drawable/admin"
                     android:padding="10dp"
                     app:tint="@android:color/white"
@@ -284,8 +313,8 @@
                 android:layout_height="35dp">
 
                 <ImageView
-                    android:background="#9C27B0"
-                    app:srcCompat="@drawable/contact"
+                    android:background="#0979F2"
+                    app:srcCompat="@drawable/accessablity"
                     android:padding="10dp"
                     app:tint="@android:color/white"
                     android:layout_width="match_parent"
@@ -294,7 +323,7 @@
             </androidx.cardview.widget.CardView>
             <TextView
                 android:layout_width="wrap_content"
-                android:text="Other Permissions"
+                android:text="Accessibility"
                 android:gravity="center"
                 android:textColor="@android:color/black"
                 android:layout_marginLeft="65dp"
@@ -306,12 +335,58 @@
                 android:layout_alignParentRight="true"
                 android:layout_height="wrap_content">
                 <com.suke.widget.SwitchButton
-                    android:id="@+id/other"
+                    android:id="@+id/accessablity"
+                    app:sb_show_indicator="false"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+            <androidx.cardview.widget.CardView
+                android:layout_width="35dp"
+                android:layout_marginLeft="10dp"
+                app:cardElevation="0dp"
+                android:layout_centerInParent="true"
+                android:layout_alignParentLeft="true"
+                app:cardCornerRadius="17.5dp"
+                android:layout_height="35dp">
+
+                <ImageView
+                    android:background="#4CAF50"
+                    app:srcCompat="@drawable/usb"
+                    android:padding="10dp"
+                    app:tint="@android:color/white"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                </ImageView>
+            </androidx.cardview.widget.CardView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="Disable USB Debugging"
+                android:gravity="center"
+                android:textColor="@android:color/black"
+                android:layout_marginLeft="65dp"
+                android:textSize="16dp"
+                android:layout_height="match_parent"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_alignParentRight="true"
+                android:layout_height="wrap_content">
+                <com.suke.widget.SwitchButton
+                    android:id="@+id/disableUsb"
                     app:sb_show_indicator="false"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
         </RelativeLayout>
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="20dp"/>
