--- a/keyOS/res/layout/activity_permission.xml
+++ b/keyOS/res/layout/activity_permission.xml
@@ -50,13 +50,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginHorizontal="15dp"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
 
             <androidx.cardview.widget.CardView
                 android:layout_marginTop="20dp"
-                app:cardCornerRadius="5dp"
+                app:cardCornerRadius="10dp"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginBottom="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="200dp">
 
@@ -70,9 +71,7 @@
                         android:layout_width="match_parent"
                         android:text="Usage Access"
                         android:gravity="center"
-                        android:layout_marginTop="20dp"
                         android:textSize="28dp"
-                        android:textStyle="bold"
                         android:textColor="@color/black"
                         android:fontFamily="@font/poppins_medium"
                         android:layout_height="wrap_content"/>
@@ -80,7 +79,7 @@
                         android:layout_marginTop="10dp"
                         android:layout_width="match_parent"
                         android:layout_marginHorizontal="20dp"
-                        android:textSize="18dp"
+                        android:textSize="17dp"
                         android:textAlignment="center"
                         android:text="Grant usage access to block unauthorized usage"
                         android:layout_height="wrap_content"/>
@@ -89,6 +88,7 @@
                         android:layout_width="140dp"
                         android:layout_marginHorizontal="30dp"
                         app:cardCornerRadius="20dp"
+                        app:cardElevation="0.1dp"
                         android:layout_marginTop="20dp"
                         android:layout_height="40dp">
 
@@ -97,7 +97,7 @@
                             android:text="Grant"
                             android:id="@+id/done"
                             android:gravity="center"
-                            android:background="@color/buttonColor"
+                            android:background="@color/green"
                             android:textColor="@android:color/white"
                             android:textStyle="bold"
                             android:layout_height="match_parent"/>
