--- a/keyOS/res/values/styles.xml
+++ b/keyOS/res/values/styles.xml
@@ -19,6 +19,47 @@
 
 <resources xmlns:tools="http://schemas.android.com/tools">
 
+    <!--    for keyOS-->
+    <style name="keyOS" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:windowBackground">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="statusBarBackground">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowShowWallpaper">false</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowTranslucentStatus">false</item>
+        <item name="android:windowLightNavigationBar">true</item>
+        <item name="fontFamily">@font/roboto_medium</item>
+        <item name="android:navigationBarColor">@color/colorPrimary</item>
+        <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
+    </style>
+
+    <style name="CustomDialog" parent="Theme.MaterialComponents.BottomSheetDialog">
+        <!--        <item name="background">@drawable/background_sheet</item>-->
+        <!--        <item name="android:windowBackground">@android:color/transparent</item>-->
+    </style>
+
+
+    <style name="heading" parent="keyOS">
+        <item name="fontFamily">@font/poppins_medium</item>
+    </style>
+
+    <style name="splashScreen" parent="keyOS">
+        <item name="fontFamily">@font/aguafina_script</item>
+    </style>
+    <style name="AppBottomSheetDialogTheme"
+        parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/AppModalStyle</item>
+    </style>
+    <style name="AppModalStyle" parent="Widget.Design.BottomSheet.Modal">
+        <item name="background">@drawable/background_sheet</item>
+    </style>
+
+    <!--    over-->
+
+
+
     <style name="LauncherTheme.Black" parent="@style/LauncherTheme.Dark">
         <item name="android:colorPrimary">#000000</item>
         <item name="allAppsScrimColor">#EA000000</item>
@@ -53,7 +94,6 @@
         <!-- Backports -->
         <item name="android:textColorPrimaryInverse">@color/primary_text_material_light</item>
         <item name="android:textColorSecondaryInverse">@color/secondary_text_material_light</item>
-
         <item name="android:colorPrimary">@color/colorPrimary</item>
         <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:colorAccent">@color/colorAccent</item>
