--- a/keyOS/res/layout/activity_password.xml
+++ b/keyOS/res/layout/activity_password.xml
@@ -25,6 +25,7 @@
                     android:layout_width="match_parent"
                     android:id="@+id/appBar"
                     app:cardElevation="0dp"
+                    android:visibility="gone"
                     android:layout_height="60dp">
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -56,7 +57,7 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-
+                    android:layout_marginTop="20dp"
                     android:layout_marginBottom="20dp"
                     android:layout_height="150dp">
                     <LinearLayout
@@ -89,136 +90,94 @@
 
                 </RelativeLayout>
 
-                <RelativeLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:background="@drawable/edit_text"
-                    android:layout_marginVertical="12dp"
-                    android:weightSum="100"
-                    android:layout_gravity="center"
-                    android:layout_marginHorizontal="15dp"
-                    android:layout_height="45dp">
-                    <EditText
-                        android:hint="Recovery email"
+                    android:paddingHorizontal="20dp"
+                    app:counterOverflowTextColor="@color/buttonColor"
+                    android:theme="@style/EditTextStyle"
+                    android:hint="Email"
+                    android:layout_marginBottom="20dp"
+                    android:id="@+id/emailLayout"
+                    app:hintTextColor="@color/buttonColor"
+                    android:layout_height="wrap_content">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:theme="@style/EditTextStyle"
                         android:id="@+id/email"
-                        android:layout_weight="15"
-                        android:inputType="textPersonName"
-                        android:textSize="15dp"
-                        android:layout_marginRight="60dp"
-                        android:layout_width="match_parent"
-                        android:background="@android:color/transparent"
-                        android:paddingLeft="20dp"
-                        android:layout_height="45dp"/>
+                        android:inputType="textEmailAddress"
+                        android:backgroundTint="@color/colorPrimary"
+                        android:layout_height="match_parent"/>
 
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_alignParentRight="true"
-                        app:srcCompat="@drawable/email"
-                        android:padding="13dp"
-                        app:tint="@android:color/darker_gray"
-                        android:layout_height="50dp"/>
+                </com.google.android.material.textfield.TextInputLayout>
 
-                </RelativeLayout>
-                <RelativeLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:background="@drawable/edit_text"
-                    android:layout_marginVertical="12dp"
-                    android:weightSum="100"
-                    android:id="@+id/oldPasswordContainer"
+                    android:paddingHorizontal="20dp"
+                    app:counterOverflowTextColor="@color/buttonColor"
+                    android:theme="@style/EditTextStyle"
+                    android:hint="Old Password"
+                    android:layout_marginBottom="20dp"
+                    android:id="@+id/oldPasswordLayout"
                     android:visibility="gone"
-                    android:layout_marginHorizontal="15dp"
-                    android:layout_gravity="center"
-                    android:layout_height="45dp">
-                    <EditText
-                        android:hint="Old Password"
+                    app:hintTextColor="@color/buttonColor"
+                    android:layout_height="wrap_content">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:theme="@style/EditTextStyle"
                         android:id="@+id/oldPassword"
-                        android:layout_weight="15"
                         android:inputType="textPassword"
-                        android:textSize="15dp"
-                        android:layout_marginRight="60dp"
-                        android:layout_width="match_parent"
-                        android:background="@android:color/transparent"
-                        android:paddingLeft="20dp"
-                        android:layout_height="45dp"/>
+                        android:backgroundTint="@color/colorPrimary"
+                        android:layout_height="match_parent"/>
+                </com.google.android.material.textfield.TextInputLayout>
 
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_alignParentRight="true"
-                        app:srcCompat="@drawable/password"
-                        android:padding="10dp"
-                        app:tint="@android:color/darker_gray"
-                        android:layout_height="50dp"/>
-
-                </RelativeLayout>
-
-                <RelativeLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:background="@drawable/edit_text"
-                    android:layout_marginVertical="12dp"
-                    android:weightSum="100"
-                    android:layout_marginHorizontal="15dp"
-                    android:layout_gravity="center"
-                    android:layout_height="45dp">
-                    <EditText
-                        android:hint="Password"
+                    android:paddingHorizontal="20dp"
+                    app:counterOverflowTextColor="@color/buttonColor"
+                    android:theme="@style/EditTextStyle"
+                    android:hint="Password"
+                    android:layout_marginBottom="20dp"
+                    android:id="@+id/passwordLayout"
+                    app:hintTextColor="@color/buttonColor"
+                    android:layout_height="wrap_content">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:theme="@style/EditTextStyle"
                         android:id="@+id/password"
-                        android:layout_weight="15"
                         android:inputType="textPassword"
-                        android:textSize="15dp"
-                        android:layout_marginRight="60dp"
-                        android:layout_width="match_parent"
-                        android:background="@android:color/transparent"
-                        android:paddingLeft="20dp"
-                        android:layout_height="45dp"/>
+                        android:backgroundTint="@color/colorPrimary"
+                        android:layout_height="match_parent"/>
 
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_alignParentRight="true"
-                        app:srcCompat="@drawable/password"
-                        android:padding="10dp"
-                        app:tint="@android:color/darker_gray"
-                        android:layout_height="50dp"/>
+                </com.google.android.material.textfield.TextInputLayout>
 
-                </RelativeLayout>
-                <RelativeLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_marginBottom="100dp"
-                    android:background="@drawable/edit_text"
-                    android:layout_marginTop="12dp"
-                    android:weightSum="100"
-                    android:layout_marginHorizontal="15dp"
-                    android:layout_gravity="center"
-                    android:layout_height="45dp">
+                    android:paddingHorizontal="20dp"
+                    app:counterOverflowTextColor="@color/buttonColor"
+                    android:theme="@style/EditTextStyle"
+                    android:hint="Confirm password"
+                    android:layout_marginBottom="20dp"
+                    android:id="@+id/confirmPasswordLayout"
+                    app:hintTextColor="@color/buttonColor"
+                    android:layout_height="wrap_content">
 
-                    <EditText
-                        android:id="@+id/confirmPassword"
+                    <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
-                        android:textSize="15dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="15"
-                        android:background="@android:color/transparent"
-                        android:hint="Confirm password"
+                        android:theme="@style/EditTextStyle"
+                        android:id="@+id/confirmPassword"
                         android:inputType="textPassword"
-                        android:layout_marginRight="60dp"
-                        android:paddingLeft="20dp"
-                        android:singleLine="true"/>
+                        android:backgroundTint="@color/colorPrimary"
+                        android:layout_height="match_parent"/>
 
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_alignParentRight="true"
-                        app:srcCompat="@drawable/password"
-                        android:padding="10dp"
-                        app:tint="@android:color/darker_gray"
-                        android:layout_height="50dp"/>
-                </RelativeLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"/>
 
 
             </LinearLayout>
