--- a/keyOS/res/layout/activity_import_export_settings.xml
+++ b/keyOS/res/layout/activity_import_export_settings.xml
@@ -72,6 +72,7 @@
 
                     <RelativeLayout
                         android:layout_width="match_parent"
+                        android:id="@+id/scan"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="30dp">
 
@@ -141,6 +142,7 @@
 
                     <RelativeLayout
                         android:layout_width="match_parent"
+                        android:id="@+id/displayQr"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp">
 
@@ -311,6 +313,7 @@
 
                     <RelativeLayout
                         android:layout_width="match_parent"
+                        android:id="@+id/export"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp">
 
