otp for password

--- a/keyOS/res/layout/activity_password.xml
+++ b/keyOS/res/layout/activity_password.xml
@@ -95,7 +95,7 @@
                     android:paddingHorizontal="20dp"
                     app:counterOverflowTextColor="@color/buttonColor"
                     android:theme="@style/EditTextStyle"
-                    android:hint="Email"
+                    android:hint="Recovery Email"
                     android:layout_marginBottom="20dp"
                     android:id="@+id/emailLayout"
                     app:hintTextColor="@color/buttonColor"
@@ -196,7 +196,6 @@
                 android:orientation="horizontal"
                 android:weightSum="100"
                 android:translationZ="200dp"
-                app:elevation="200dp"
                 android:elevation="200dp"
                 android:gravity="center"
                 android:background="@color/colorPrimary"
@@ -207,7 +206,6 @@
                     android:layout_weight="50"
                     android:orientation="vertical"
                     android:translationZ="200dp"
-                    app:elevation="200dp"
                     android:elevation="200dp"
                     android:layout_height="match_parent">
 
