--- a/keyOS/res/layout/activity_splash_screen.xml
+++ b/keyOS/res/layout/activity_splash_screen.xml
@@ -10,21 +10,25 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_centerInParent="true"
+        android:gravity="center"
+        android:orientation="vertical"
         android:layout_height="wrap_content">
+
         <androidx.cardview.widget.CardView
-            android:layout_width="120dp"
+            android:layout_width="110dp"
+            app:cardBackgroundColor="@color/black"
             android:layout_marginHorizontal="10dp"
+            app:cardCornerRadius="25dp"
             android:layout_marginBottom="120dp"
-            app:cardCornerRadius="60dp"
-            android:layout_marginTop="20dp"
-            android:layout_height="120dp">
+            android:layout_height="110dp">
             <ImageView
-                android:layout_margin="15dp"
                 android:layout_width="match_parent"
                 android:src="@drawable/app_icon"
                 app:srcCompat="@drawable/app_icon"
                 android:layout_height="match_parent"/>
         </androidx.cardview.widget.CardView>
+
+
 
     </LinearLayout>
 
@@ -33,10 +37,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
+        android:textColor="@android:color/darker_gray"
         android:layout_marginBottom="30dp"
-        style="@style/splashScreen"
+        android:theme="@style/splashScreen"
         android:id="@+id/greetings"
         android:fontFamily="@font/aguafina_script"
-        android:text="Handcrafted by DevAsh"
+        android:text="Handcrafted  by  DevAsh"
         android:textSize="20dp" />
 </RelativeLayout>
